Fix operator overload with class(*) args
The operator overload resolution in use_overloaded() was failing to
match overloaded operators when a formal parameter was class(*)
(unlimited polymorphic) but the actual argument was a non-class type
(e.g., real). The type enum comparison rejected the match because
StructType != Real, even though class(*) should accept any type.

This caused an ICE (assertion failure) in find_conversion_candidate()
when it received a StructType that was out of range for the
type_priority array.

Fix: skip the type enum mismatch check when the formal parameter type is
unlimited polymorphic, in all three use_overloaded() variants (binop,
cmpop, logicalbinop).

Fixes #10379.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -2525,6 +2525,7 @@ RUN(NAME class_119 LABELS gfortran llvm)
 RUN(NAME class_120 LABELS gfortran llvm)
 RUN(NAME class_121 LABELS gfortran llvm)
 RUN(NAME class_122 LABELS gfortran llvm)
+RUN(NAME class_123 LABELS gfortran llvm)
 
 RUN(NAME class_procedure_args_01 LABELS gfortran llvm)
 
